--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
 asgiref==3.5.2
 Django==4.0.5
+gunicorn==20.1.0
+Pillow==9.1.1
+python-dotenv==0.20.0
 sqlparse==0.4.2
 tzdata==2022.1
+whitenoise==6.2.0
