--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ max-line-length = 99
 exclude = **/migrations/*,venv
 
 [tool:pytest]
-DJANGO_SETTINGS_MODULE = profile.settings
+DJANGO_SETTINGS_MODULE = portfolio.settings
 python_files = tests.py
 addopts = -v
 
