--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.5.2
 atomicwrites==1.4.0
 attrs==21.4.0
+certifi==2022.6.15
 colorama==0.4.5
 Django==4.0.5
 gunicorn==20.1.0
@@ -13,7 +14,9 @@ pyparsing==3.0.9
 pytest==7.1.2
 pytest-django==4.5.2
 python-dotenv==0.20.0
+sentry-sdk==1.7.0
 sqlparse==0.4.2
 tomli==2.0.1
 tzdata==2022.1
+urllib3==1.26.10
 whitenoise==6.2.0
