--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
           command: python manage.py test
       - run:
           name: Linter
-          command: flake8
+          command: flake8 --max-line-length=105
   
   build-and-push-docker-image:
     docker:
