--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,16 @@ attrs==21.4.0
 certifi==2022.6.15
 colorama==0.4.5
 Django==4.0.5
+flake8==4.0.1
 gunicorn==20.1.0
 iniconfig==1.1.1
+mccabe==0.6.1
 packaging==21.3
 Pillow==9.1.1
 pluggy==1.0.0
 py==1.11.0
+pycodestyle==2.8.0
+pyflakes==2.4.0
 pyparsing==3.0.9
 pytest==7.1.2
 pytest-django==4.5.2
