--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ colorama==0.4.5
 Django==4.0.5
 django-filter==22.1
 django-restframework==0.0.1
+djangorestframework==3.13.1
+djangorestframework-simplejwt==5.2.0
 flake8==4.0.1
 geoip2==2.9.0
 gunicorn==20.1.0
@@ -23,10 +25,12 @@ pluggy==1.0.0
 py==1.11.0
 pycodestyle==2.8.0
 pyflakes==2.4.0
+PyJWT==2.4.0
 pyparsing==3.0.9
 pytest==7.1.2
 pytest-django==4.5.2
 python-dotenv==0.20.0
+pytz==2022.1
 requests==2.28.1
 sentry-sdk==1.7.0
 sqlparse==0.4.2
